--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -9,4 +9,4 @@ location: "Tehran, Iran"
 ---
 
 This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
-[Download presentation here](http://academicpages.github.io/files/paper1.pdf)
+[Download the slides here](http://academicpages.github.io/files/paper1.pdf)
